# xtrader

./: .gitignore  README.md  config.json  demo.ipynb  pyproject.toml  setup.py
apis/stocks/: base.py
examples/: demo.ipynb
xtrader/: __init__.py  temp.py  utils.py
xtrader/alphas/: __init__.py  returns.py
xtrader/apis/: __init__.py  format.py
xtrader/apis/crypto/: __init__.py  alphavantage.py  base.py
xtrader/apis/forex/: __init__.py  alphavantage.py
xtrader/apis/fundamentals/: __init__.py  alphavantage.py
xtrader/apis/macroeconomic/: __init__.py
xtrader/apis/news/: alphavantage.py
xtrader/apis/rest/: __init__.py
xtrader/apis/rest/crypto/: __init__.py  alphavantage.py
xtrader/apis/rest/forex/: __init__.py  alphavantage.py
xtrader/apis/rest/fundamentals/: __init__.py  alphavantage.py
xtrader/apis/rest/macroeconomic/: __init__.py  alphavantage.py
xtrader/apis/rest/news/: __init__.py  alphavantage.py
xtrader/apis/rest/stocks/: __init__.py  alphavantage.py
xtrader/apis/stocks/: __init__.py  alphavantage.py
xtrader/databricks/: __init__.py  sparkconnect.py
xtrader/dataloaders/: __init__.py  checks.py  ohlc.py
xtrader/factors/: __init__.py  momenta.py  returns.py  seasonal.py  technical.py  utils.py
xtrader/spark/: session.py
