[tool.poetry]
name = "xtrader"
version = "0.1.0"
description = ""
authors = ["georgesmyr <70004539+georgesmyr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
mplfinance = "^0.12.10b0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
